--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 Sublime Text 3/Packages/User/Package Control.cache
 Sublime Text 3/Packages/User/Package Control.last-run
+.atom/storage
+.atom/compile-cache
+.atom/dev
+.atom/.npm
+.atom/.node-gyp
+.atom/.apm/.apmrc
